--- a/Friday.ERP.Client/Pages/Dashboard/Index.razor
+++ b/Friday.ERP.Client/Pages/Dashboard/Index.razor
@@ -10,7 +10,7 @@
 @layout MainLayout
 @attribute [Authorize]
 
-<CustomPageContainer>
+<CustomContainer>
     <MudItem sm="12" style="padding: 6px;">
     </MudItem>
     <MudItem sm="12" md="8" lg="8">
@@ -187,7 +187,7 @@
     </MudItem>
     <MudItem sm="12" style="padding: 6px;">
     </MudItem>
-</CustomPageContainer>
+</CustomContainer>
 
 
 @code {
